k8s/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lumina-service
  namespace: dev
spec:
  type: ClusterIP
  selector:
    app: lumina-app
  ports:
    - port: 80
      targetPort: 80
