k8s/dev/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-prefix
  namespace: dev
spec:
  stripPrefix:
    forceSlash: true
    prefixes:
      - /dev
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lumina-ingress
  namespace: dev
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: dev-strip-prefix@kubernetescrd
spec:
  rules:
    - http:
        paths:
          - path: /dev
            pathType: Prefix
            backend:
              service:
                name: lumina-service
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lumina-root-static
  namespace: dev
spec:
  rules:
    - http:
        paths:
          - path: /assets
            pathType: Prefix
            backend:
              service:
                name: lumina-service
                port:
                  number: 80
          - path: /favicon.svg
            pathType: Exact
            backend:
              service:
                name: lumina-service
                port:
                  number: 80
          - path: /icons.svg
            pathType: Exact
            backend:
              service:
                name: lumina-service
                port:
                  number: 80
          - path: /vite.svg
            pathType: Exact
            backend:
              service:
                name: lumina-service
                port:
                  number: 80
